styles/styles.css
* {
    box-sizing: border-box;
}

body:not(:last-child) {
    margin: 0;
    max-width: 100%;
    padding: 1em;
}

p {
    color: #565365;
    flex-grow: 0;
    flex: none;
    font-size: 16px;
    font-size: 1rem;
    font-weight: 400;
    line-height: 160%;
    order: 1;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
a,
figure,
blockquote,
dl,
dd {
    font-family: 'Inter';
    font-style: normal;
    margin: 0;
}

h4 {
    align-self: stretch;
    color: #0E0A23;
    flex-grow: 0;
    flex: none;
    font-size: 30px;
    font-weight: 700;
    letter-spacing: 0.2px;
    line-height: 140%;
    order: 0;
}

a {
    text-decoration: none;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
    list-style: none;
}

.pad>* {
    padding: 0.5em 0;
}

button {
    background-color: #003458;
    border: none;
    color: white;
    padding: 1em 2em;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 1em;
    margin: 0.5em 0.2em;
    cursor: pointer;
}

.button-1 {
    background-color: white;
    color: #003458;
    border: 0.01px solid #E6E6E9;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar-links ul {
    margin: 0;
    padding: 0;
    display: flex;
}

.navbar-links li {
    list-style: none;
}

.navbar-links li a {
    text-decoration: none;
    padding: 1rem;
    display: block;
    color: #565365;
    font-weight: 400;
    font-size: 16px;
}

li:first-child a {
    color: #F01159;
}

.navbar-links li:first-child a:hover {
    color: #F01159;
    background-color: #E5EAEE;
    font-weight: 700;
}

.navbar-links li a:hover {
    color: #003458;
    background-color: #E5EAEE;
    font-weight: 700;
}

.toggle-button {
    position: absolute;
    top: .75rem;
    right: 1rem;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 21px;
}

.toggle-button .bar {
    height: 3px;
    width: 100%;
    background-color: #003458;
    border-radius: 10px;
}

.brand {
    color: #F01159;
    font-weight: 700;
    font-size: 20px;
    font-style: normal;
    margin: .5rem;
}

@media (max-width: 50em) {
    .toggle-button {
        display: flex;
    }

    .navbar-links {
        display: none;
        width: 100%;
    }

    .navbar {
        flex-direction: column;
        align-items: flex-start;
    }

    .navbar-links ul {
        width: 100%;
        flex-direction: column;
    }

    .navbar-links li {
        text-align: center;
    }

    .navbar-links li a {
        padding: .5rem 1rem;
    }

    .navbar-links.active {
        display: flex;
    }
}

.second-container {
    position: relative;
}

.second-container>* {
    padding: 1em;
}

.second-container-img {
    padding: 1em;
}

.second-container-img img {
    width: 100%;
    height: 30em;
    object-fit: cover;
}

.second-container-first {
    display: none;
    position: absolute;
    width: 60%;
    top: 2em;
    left: 0;
}

.second-container-first h3 {
    color: white;
    background: #F01159;
    display: inline;
    font-size: 2.3em;
}

.button-flex {
    display: flex;
    justify-content: flex-start;

}

@media (min-width: 50em) {
    .second-container {
        display: flex;
        flex-direction: row-reverse;
        justify-content: space-evenly;
        align-items: center;
    }

    .second-container>* {
        flex: 1;
    }

    .second-container-article {
        position: relative;
    }

    .second-container-article>* {
        padding: 1.5em 0;
    }

    .second-container-position {
        display: none;
    }

    .second-container-first {
        display: flex;
    }
}


.third-container>* {
    padding: 1em;
}

.third-container-article img {
    display: none;
}

@media (min-width: 50em) {
    .third-container-article {
        display: flex;
        justify-content: space-evenly;
        align-items: center;
    }

    .third-container-article>* {
        flex: 1;
    }

    .third-container-article img {
        display: inline-block;
    }
}

.forth-container>* {
    padding: 1em;
}

.forth-container-article {
    padding-bottom: 1em;
}

.box-element {
    border: 1px solid #E6E6E9;
    width: 90%;
    margin-bottom: 1em;
}

.box-element-image img {
    max-width: 100%;
}

.button-2 {
    background-color: #003458;
    border: none;
    color: white;
    padding: 1em 2em;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 1em;
    margin: 0.5em 0em;
    cursor: pointer;
}

@media (max-width: 50em) {
    .box-element {
        border: 1px solid #E6E6E9;
        width: 100%;
        display: flex;
        justify-content: flex-start;
        gap: 1;
        margin-bottom: 1em;
    }

    .box-element>* {
        gap: 1;
    }

    .box-element-image img {
        padding-top: 1.3em;
        padding-left: 0.3em;
        max-width: 100%;
        display: block;
        object-fit: contain;

    }
}

@media (min-width: 50em) {
    .flex-elements {
        display: flex;
    }

    .flex-elements>* {
        flex: 1;
    }

    .article-forth {
        align-self: center;
    }

    .flex-boxes {
        display: flex;
        height: 30em;
    }

    .flex-boxes-1 {
        align-self: flex-start;
    }

    .flex-boxes-2 {
        align-self: flex-end;
    }
}


.fifth-container>* {
    padding: 1em;
}

.fifth-container {
    background-image: url("/assets/Frame\ 35.png");
    background-position: right;
    background-repeat: no-repeat;
    background-size: contain;
    height: 40em;
    position: relative;
}

.article-fifth {
    width: 50%;
}

@media (max-width: 50em) {
    .article-fifth {
        bottom: 0;
        left: 0;
        position: absolute;
        right: 0;
        width: 100%;
    }

    .fifth-container {
        background-position: top;
    }
}

.sixth-container {
    padding: 1em;
    position: relative;
    width: inherit;
}

.list-flex {
    display: flex;

}

.sixth-container-img img {
    object-fit: contain;
    width: 100%;
}



@media (min-width: 60em) {
    .sixth-container {
        display: flex;
        justify-content: space-evenly;
    }

    .article-sixth {
        width: 50%;
    }

    .sixth-container .second-container-img {
        flex-grow: 1;
    }

}

.seventh-container {
    display: grid;
    height: 200px;
    place-items: center;
    width: 100%;
}

.seventh-container span {
    width: 60%;
}

.seventh-container h4 {
    letter-spacing: 0.2px;
    text-align: center;
}

.eight-container {
    align-items: center;
    display: flex;
    flex-flow: wrap;
    justify-content: center;
}

.eight-container>* {
    padding: 1em;
}

.item {
    text-align: center;
}

.item img {
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
}


@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.container {
    max-width: 1170px;
    margin: auto;
    padding: 0;

}

.row {
    display: flex;
    justify-content: space-between;
    /* flex-wrap: wrap; */
}

@media (max-width: 50em) {
    .row {
        display: inline-block;
    }
}

ul {
    list-style: none;
}

.footer {
    background-color: #001523;
    padding: 70px 0;
    margin-top: 30px;

}

.footer-col {
    padding: 30px 15px;
}

.footer-col h4 {
    font-size: 18px;
    color: #ffffff;
    text-transform: capitalize;
    margin-bottom: 35px;
    font-weight: 500;
    position: relative;
}

.footer-col ul li:not(:last-child) {
    margin-bottom: 10px;
}

.footer-col ul li a {
    font-size: 16px;
    text-transform: capitalize;
    color: #ffffff;
    text-decoration: none;
    font-weight: 300;
    color: #bbbbbb;
    display: block;
    transition: all 0.3s ease;
}

.footer-col ul li a:hover {
    color: #ffffff;
    padding-left: 8px;
}

.footer-col .social-links a {
    display: inline-block;
    height: 40px;
    width: 40px;
    background-color: rgba(255, 255, 255, 0.2);
    margin: 30px 10px 10px 0;
    text-align: center;
    line-height: 40px;
    border-radius: 50%;
    color: #ffffff;
    transition: all 0.5s ease;
}

.footer-col .social-links a:hover {
    color: #24262b;
    background-color: #ffffff;
}

.dropdown {
    position: relative;
}


.select {
    background: #040e16;
    color: #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-radius: 0.5em;
    padding: 1em;
    cursor: pointer;
    transition: background 0.3s;
}

.select-clicked {
    border: 2px yellow solid;
    box-shadow: 0 0 0.8em #26489a;
}

.select:hover {
    background: #323741;
}

.caret {
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 6px solid #fff;
    transition: 0.3s;
}

.caret-rotate {
    transform: rotate(180deg);
}

.menu {
    background: #323741;
    border-radius: 0.5em;
    border: 1px #363a43 solid;
    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
    color: white;
    display: none;
    left: 50%;
    list-style: none;
    opacity: 0;
    padding: 0.2em 0.5em;
    position: absolute;
    top: 3em;
    transform: translateX(-50%);
    transition: 0.2s;
    width: 100%;
    z-index: 1;
}

.menu li {
    padding: 0.7em 0.5em;
    margin: 0.3em 0;
    border-radius: 0.5em;
    cursor: pointer;
}

.menu li:hover {
    background: #2a2d35;
}

.menu-open {
    display: block;
    opacity: 1;
}

.footer-end {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white
}

